Fix button hover on mobile

--- a/main.css
+++ b/main.css
@@ -32,8 +32,10 @@ button {display: inline-block;
     font-size: 5vh;
     margin-bottom: 10px;}
 
-button:hover {cursor: pointer;
-    background-color: lightgray;}
+@media(hover: hover) and (pointer: fine) {
+    button:hover {cursor: pointer;
+        background-color: lightgray;}
+}
 
 #tutorial_container {display: inline-block;}
 
